--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -14,19 +14,19 @@
         android:label="@string/app_name"
         android:theme="@style/MainTheme">
         <activity
-            android:name="christian.network.WelcomeActivity"
+            android:name=".WelcomeActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
         <activity
-            android:name="christian.network.SelectchurchActivity"
+            android:name=".SelectchurchActivity"
             android:label="@string/title_activity_selectchurch"
             android:screenOrientation="portrait" />
         <activity
-            android:name="christian.network.FollowUsersActivity"
+            android:name=".FollowUsersActivity"
             android:label="@string/title_activity_follow_pastore"
             android:screenOrientation="portrait" />
         <activity
-            android:name="christian.network.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait" />
         <!-- Facebook Activity -->
@@ -42,7 +42,7 @@
             android:value="@string/facebook_app_id" />
 
         <activity
-            android:name="christian.network.SplashActivity"
+            android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -51,21 +51,38 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="christian.network.CreateFeedActivity"
+            android:name=".CreateFeedActivity"
             android:label="@string/create_feed"
-            android:parentActivityName="christian.network.MainActivity"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="christian.network.CommentActivity"
+            android:name=".CommentActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name="christian.network.ProfileActivity"
-            android:parentActivityName="christian.network.MainActivity"
+            android:name=".ProfileActivity"
+            android:parentActivityName=".MainActivity"
             android:screenOrientation="portrait" />
-        <activity android:name="christian.network.EditProfileActivity"
+        <activity
+            android:name=".EditProfileActivity"
             android:label="@string/edit_profile"
-            android:screenOrientation="portrait"
-            android:parentActivityName="christian.network.ProfileActivity"/>
+            android:parentActivityName=".ProfileActivity"
+            android:screenOrientation="portrait" />
+
+        <service
+            android:name=".services.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <service
+            android:name=".services.MyFirebaseInstanceIdService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
